--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,17 +1,13 @@
-name: ci
+name: deploy
 
 on:
-  push:
-    branches:
-      - main
-      - master
-  pull_request:
-    branches:
-      - main
-      - master
+  release:
+    types: [published]
+
+  workflow_dispatch:
 
 jobs:
-  ci:
+  deploy:
     runs-on: ${{ matrix.os }}
 
     strategy:
@@ -40,11 +36,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
 
-      - name: Install dependencies 👨🏻‍💻
+      - name: Install dependencies 📥
         run: npm install
 
-      - name: Run linter 👀
-        run: npm run lint
+      - name: Generate static site 🏭
+        run: npm run generate
 
-      - name: Run tests 🧪
-        run: npm run test
+      - name: Deploy static files to gh-pages branch 📤🌟
+        run: npm run deploy
