--- a/src/package.json
+++ b/src/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
     "build": "nuxt build",
-    "start": "nuxt start",
+    "dev": "nuxt dev",
     "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare",
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup",
     "lint:js": "eslint --ext \".js,.ts,.vue\" --ignore-path .gitignore .",
     "lint:style": "stylelint \"**/*.{css,scss,sass,html,vue}\" --ignore-path .gitignore",
@@ -14,35 +15,32 @@
     "lint": "npm run lint:js && npm run lint:style && npm run lint:prettier",
     "lintfix": "prettier --write --list-different . && npm run lint:js -- --fix && npm run lint:style -- --fix"
   },
-  "dependencies": {
-    "core-js": "^3.19.3",
-    "nuxt": "^2.15.8",
-    "vue": "^2.6.14",
-    "vue-server-renderer": "^2.6.14",
-    "vue-template-compiler": "^2.6.14",
-    "webpack": "^4.46.0"
-  },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.16.3",
     "@nuxt/types": "^2.15.8",
-    "@nuxt/typescript-build": "^2.1.0",
-    "@nuxtjs/eslint-config-typescript": "^8.0.0",
-    "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/color-mode": "^3.1.5",
+    "@nuxtjs/eslint-module": "^3.1.0",
     "@nuxtjs/stylelint-module": "^4.1.0",
-    "@nuxtjs/tailwindcss": "^4.2.1",
-    "eslint": "^8.4.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-nuxt": "^3.1.0",
-    "eslint-plugin-vue": "^8.2.0",
-    "postcss": "^8.4.4",
-    "postcss-html": "^1.3.0",
-    "prettier": "^2.5.1",
+    "@nuxtjs/tailwindcss": "^5.3.3",
+    "@types/tailwindcss": "^3.1.0",
+    "eslint": "^8.23.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-nuxt": "^4.0.0",
+    "eslint-plugin-vue": "^9.5.1",
+    "nuxt": "3.0.0-rc.10",
+    "postcss": "^8.4.16",
+    "postcss-html": "^1.5.0",
+    "prettier": "^2.7.1",
     "push-dir": "^0.4.1",
-    "stylelint": "^14.1.0",
+    "sass": "^1.54.9",
+    "sass-loader": "^13.0.2",
+    "stylelint": "^14.11.0",
     "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-recommended-vue": "^1.1.0",
-    "stylelint-config-standard": "^24.0.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.3"
+    "stylelint-config-recommended-vue": "^1.4.0",
+    "stylelint-config-standard": "^28.0.0",
+    "typescript": "^4.8.3",
+    "vue-tsc": "^1.0.0-alpha.0"
+  },
+  "dependencies": {
+    "@heroicons/vue": "^2.0.11"
   }
 }
