--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,23 +29,16 @@ jobs:
           node-version: ${{ matrix.node }}
           check-latest: true
 
-      - name: Cache node_modules 📦
-        uses: actions/cache@v2.1.4
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
       - name: Install dependencies 👨🏻‍💻
         run: |
+          npm install yarn
           cd src
-          npm install
+          yarn install
 
       - name: Run linter 👀
         run: |
           cd src
-          npm run lint
+          yarn run lint
 
       # - name: Run tests 🧪
       #   run: |
