--- a/src/package.json
+++ b/src/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
-    "generate": "nuxt generate",
+    "generate": "npx nuxi generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup",
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@nuxt/types": "^2.15.8",
     "@nuxtjs/color-mode": "^3.1.5",
+    "@nuxtjs/eslint-config-typescript": "^11.0.0",
     "@nuxtjs/eslint-module": "^3.1.0",
     "@nuxtjs/stylelint-module": "^4.1.0",
     "@nuxtjs/tailwindcss": "^5.3.3",
@@ -39,8 +40,5 @@
     "stylelint-config-standard": "^28.0.0",
     "typescript": "^4.8.3",
     "vue-tsc": "^1.0.0-alpha.0"
-  },
-  "dependencies": {
-    "@heroicons/vue": "^2.0.11"
   }
 }
