--- a/src/package.json
+++ b/src/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
-    "generate": "npx nuxi generate",
+    "generate": "npx nuxi generate && touch dist/.nojekyll",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup",
