--- a/src/package.json
+++ b/src/package.json
@@ -40,5 +40,8 @@
     "stylelint-config-standard": "^28.0.0",
     "typescript": "^4.8.3",
     "vue-tsc": "^1.0.0-alpha.0"
+  },
+  "dependencies": {
+    "vue3-carousel": "^0.1.46"
   }
 }
